<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
    android:id="@+id/tv_register"
    android:text="@string/register"
    android:textSize="@dimen/txt_45sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPink"
    android:textAlignment="center"
    android:textAllCaps="false"
    />

    <EditText
        android:id="@+id/et_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_firstName"
        android:layout_below="@id/tv_register"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@color/colorWhite"
        android:textSize="@dimen/txt_30sp"
        />
    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_below="@id/et_firstName"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@color/colorWhite"
        android:textSize="@dimen/txt_30sp"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/et_lastName"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@color/colorWhite"
        android:textSize="@dimen/txt_30sp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/et_email"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@color/colorWhite"
        android:textSize="@dimen/txt_30sp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        />
    <TextView
        android:id="@+id/tv_termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:text="@string/tv_termsAndConditions"
        android:textSize="@dimen/txt_25sp"
        />
        </RelativeLayout>
   </ScrollView>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/txt_30sp"
        android:background="@color/colorPink"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
