<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ff0"
        android:textSize="@dimen/txt_30sp" />

    <ImageButton
        android:id="@+id/imgbtn_1"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_below="@id/tv_login"
        android:layout_centerInParent="true"
        android:src="@drawable/nastlogo"

        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgbtn_1"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/dimen_10dp"
        android:background="@color/colorWhite"
        android:hint="@string/email"
        android:textSize="@dimen/txt_30sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:drawablePadding="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/txt_30sp" />

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:background="@color/colorAccent"
        android:text="@string/tv_forgotPassword"
        android:textAllCaps="true"
        android:textColor="#ff0"
        android:textSize="@dimen/txt_20sp" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:background="@color/colorPrimaryDark"
        android:textSize="@dimen/txt_30sp"
        android:textAlignment="center"/>
</RelativeLayout>
